[package]
name = "AutoGit"
version = "0.1.0"
authors = ["Ali Alboainin <44374885+AliAlboainin96@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "2.33.0", features = ["yaml"] }
regex = "1"
